[package]
name = "zulip_helper"
version = "0.1.0"
authors = ["Julian Bieber <j.bieber@patagona.de>"]
edition = "2018"

[dependencies]
reqwest = "0.9.18"
dirs = "2.0.1"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = "1.0.92"
serde_json = "1.0.39"
serde_derive = "1.0.92"
lazy_static = "1.3.0"
toml = "0.5.1"
structopt = "0.2.16"
chrono = "0.4.6"